TRAB2 alterei tudo para doubleclick e validar não selecionado e fiz a tela de login

--- a/src/view/JDlgClientesPesquisar.form
+++ b/src/view/JDlgClientesPesquisar.form
@@ -64,6 +64,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -73,6 +76,7 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBntOkActionPerformed"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jBntOkKeyReleased"/>
       </Events>
     </Component>
   </SubComponents>
