--- a/src/view/JDlgProdutoPesquisar.form
+++ b/src/view/JDlgProdutoPesquisar.form
@@ -63,6 +63,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
